cloudformation/target/bootstrap.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Conditions": {
        "RegionIsUsEast1": {
            "Fn::Equals": [
                {
                    "Ref": "AWS::Region"
                },
                "us-east-1"
            ]
        }
    },
    "Mappings": {
        "RegionToAmi": {
            "ap-northeast-1": {
                "stable": "ami-0d74386b"
            },
            "ap-northeast-2": {
                "stable": "ami-a414b9ca"
            },
            "ap-south-1": {
                "stable": "ami-0189d76e"
            },
            "ap-southeast-1": {
                "stable": "ami-52d4802e"
            },
            "ap-southeast-2": {
                "stable": "ami-d38a4ab1"
            },
            "ca-central-1": {
                "stable": "ami-ae55d2ca"
            },
            "eu-central-1": {
                "stable": "ami-7c412f13"
            },
            "eu-west-1": {
                "stable": "ami-f90a4880"
            },
            "eu-west-2": {
                "stable": "ami-f4f21593"
            },
            "eu-west-3": {
                "stable": "ami-0e55e373"
            },
            "sa-east-1": {
                "stable": "ami-423d772e"
            },
            "us-east-1": {
                "stable": "ami-43a15f3e"
            },
            "us-east-2": {
                "stable": "ami-916f59f4"
            },
            "us-west-1": {
                "stable": "ami-925144f2"
            },
            "us-west-2": {
                "stable": "ami-4e79ed36"
            }
        }
    },
    "Outputs": {
        "PublicIP02a8c6454bed4a7e9a0f235b70e198fe": {
            "Description": "SG Server",
            "Value": {
                "Fn::GetAtt": [
                    "sgnode1",
                    "PublicIp"
                ]
            }
        },
        "PublicIP94f8c5e605144299b934a21ca185c023": {
            "Description": "SG Server",
            "Value": {
                "Fn::GetAtt": [
                    "sgnode2",
                    "PublicIp"
                ]
            }
        },
        "PublicIPbece5b6905eb4572a92adca30f54a4c4": {
            "Description": "SG Server",
            "Value": {
                "Fn::GetAtt": [
                    "sgnode3",
                    "PublicIp"
                ]
            }
        }
    },
    "Parameters": {
        "KeyName": {
            "Description": "Required: Specify your AWS EC2 Key Pair.",
            "Type": "AWS::EC2::KeyPair::KeyName"
        }
    },
    "Resources": {
        "sgdemoacl": {
            "Properties": {
                "VpcId": {
                    "Ref": "sgdemovpc"
                }
            },
            "Type": "AWS::EC2::NetworkAcl"
        },
        "sgdemoacl1": {
            "Properties": {
                "CidrBlock": "0.0.0.0/0",
                "Egress": "true",
                "NetworkAclId": {
                    "Ref": "sgdemoacl"
                },
                "Protocol": "-1",
                "RuleAction": "allow",
                "RuleNumber": "100"
            },
            "Type": "AWS::EC2::NetworkAclEntry"
        },
        "sgdemoacl2": {
            "Properties": {
                "CidrBlock": "0.0.0.0/0",
                "NetworkAclId": {
                    "Ref": "sgdemoacl"
                },
                "Protocol": "-1",
                "RuleAction": "allow",
                "RuleNumber": "100"
            },
            "Type": "AWS::EC2::NetworkAclEntry"
        },
        "sgdemodchpassoc": {
            "Properties": {
                "DhcpOptionsId": {
                    "Ref": "sgdemodhcpoptions"
                },
                "VpcId": {
                    "Ref": "sgdemovpc"
                }
            },
            "Type": "AWS::EC2::VPCDHCPOptionsAssociation"
        },
        "sgdemodhcpoptions": {
            "Properties": {
                "DomainName": {
                    "Fn::If": [
                        "RegionIsUsEast1",
                        "ec2.internal",
                        {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "AWS::Region"
                                    },
                                    ".compute.internal"
                                ]
                            ]
                        }
                    ]
                },
                "DomainNameServers": [
                    "AmazonProvidedDNS"
                ]
            },
            "Type": "AWS::EC2::DHCPOptions"
        },
        "sgdemoegress": {
            "Properties": {
                "CidrIp": "0.0.0.0/0",
                "FromPort": "-1",
                "GroupId": {
                    "Ref": "sgdemosecuritygroup"
                },
                "IpProtocol": "-1",
                "ToPort": "-1"
            },
            "Type": "AWS::EC2::SecurityGroupEgress"
        },
        "sgdemoigw": {
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "sgdemointernetgateway"
                },
                "VpcId": {
                    "Ref": "sgdemovpc"
                }
            },
            "Type": "AWS::EC2::VPCGatewayAttachment"
        },
        "sgdemoingresses": {
            "Properties": {
                "CidrIp": "0.0.0.0/0",
                "FromPort": "9200",
                "GroupId": {
                    "Ref": "sgdemosecuritygroup"
                },
                "IpProtocol": "tcp",
                "ToPort": "9399"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "sgdemoingresskibana": {
            "Properties": {
                "CidrIp": "0.0.0.0/0",
                "FromPort": "5601",
                "GroupId": {
                    "Ref": "sgdemosecuritygroup"
                },
                "IpProtocol": "tcp",
                "ToPort": "5601"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "sgdemoingressssh": {
            "Properties": {
                "CidrIp": "0.0.0.0/0",
                "FromPort": "22",
                "GroupId": {
                    "Ref": "sgdemosecuritygroup"
                },
                "IpProtocol": "tcp",
                "ToPort": "22"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "sgdemointernetgateway": {
            "Type": "AWS::EC2::InternetGateway"
        },
        "sgdemorole": {
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Statement": [
                        {
                            "Action": [
                                "sts:AssumeRole"
                            ],
                            "Effect": "Allow",
                            "Principal": {
                                "Service": [
                                    "ec2.amazonaws.com"
                                ]
                            }
                        }
                    ],
                    "Version": "2012-10-17"
                },
                "Path": "/",
                "Policies": [
                    {
                        "PolicyDocument": {
                            "Statement": [
                                {
                                    "Action": [
                                        "ec2:DescribeInstances"
                                    ],
                                    "Effect": "Allow",
                                    "Resource": [
                                        "*"
                                    ]
                                }
                            ]
                        },
                        "PolicyName": "sgdemopolicy"
                    }
                ]
            },
            "Type": "AWS::IAM::Role"
        },
        "sgdemoroute1": {
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "sgdemointernetgateway"
                },
                "RouteTableId": {
                    "Ref": "sgdemoroutetable"
                }
            },
            "Type": "AWS::EC2::Route"
        },
        "sgdemoroutetable": {
            "Properties": {
                "VpcId": {
                    "Ref": "sgdemovpc"
                }
            },
            "Type": "AWS::EC2::RouteTable"
        },
        "sgdemosecuritygroup": {
            "Properties": {
                "GroupDescription": "sgdemosecuritygroup",
                "VpcId": {
                    "Ref": "sgdemovpc"
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "sgdemosubnet": {
            "Properties": {
                "CidrBlock": "10.0.0.0/24",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Search Guard Demo  Subnet"
                    }
                ],
                "VpcId": {
                    "Ref": "sgdemovpc"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "sgdemosubnetacl1": {
            "Properties": {
                "NetworkAclId": {
                    "Ref": "sgdemoacl"
                },
                "SubnetId": {
                    "Ref": "sgdemosubnet"
                }
            },
            "Type": "AWS::EC2::SubnetNetworkAclAssociation"
        },
        "sgdemosubnetroute1": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "sgdemoroutetable"
                },
                "SubnetId": {
                    "Ref": "sgdemosubnet"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "sgdemovpc": {
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "EnableDnsHostnames": "true",
                "EnableDnsSupport": "true",
                "InstanceTenancy": "default",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Search Guard Demo VPC"
                    }
                ]
            },
            "Type": "AWS::EC2::VPC"
        },
        "sgnode1": {
            "Properties": {
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/sda1",
                        "Ebs": {
                            "VolumeSize": 25
                        }
                    }
                ],
                "DisableApiTermination": "false",
                "EbsOptimized": "false",
                "IamInstanceProfile": {
                    "Ref": "sgprofilenode1"
                },
                "ImageId": {
                    "Fn::FindInMap": [
                        "RegionToAmi",
                        {
                            "Ref": "AWS::Region"
                        },
                        "stable"
                    ]
                },
                "InstanceInitiatedShutdownBehavior": "stop",
                "InstanceType": "m4.xlarge",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "Monitoring": "false",
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": "true",
                        "DeleteOnTermination": "true",
                        "Description": "Primary network interface",
                        "DeviceIndex": 0,
                        "GroupSet": [
                            {
                                "Ref": "sgdemosecuritygroup"
                            }
                        ],
                        "SubnetId": {
                            "Ref": "sgdemosubnet"
                        }
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Search Guard node1"
                    },
                    {
                        "Key": "sgnodetag",
                        "Value": "node1"
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash\n",
                                "set -x\n",
                                "export LANGUAGE=en_US.UTF-8\n",
                                "export LANG=en_US.UTF-8\n",
                                "export LC_ALL=en_US.UTF-8\n",
                                "locale-gen en_US.UTF-8 >/dev/null 2>&1\n",
                                "\n",
                                "#we install all in /\n",
                                "cd /\n",
                                "\n",
                                "apt-get -yqq update > /dev/null 2>&1\n",
                                "apt-get -yqq install git wget curl > /dev/null 2>&1\n",
                                "rm -rf /sg-aws-demo\n",
                                "git clone https://github.com/floragunncom/sg-aws-demo.git\n",
                                "chmod +x /sg-aws-demo/*.sh\n",
                                "\n",
                                "until /sg-aws-demo/scripts/install_sg.sh; do\n",
                                "  echo \"something goes wrong, retrying in 60 seconds...\"\n",
                                "  git pull\n",
                                "  sleep 60\n",
                                "done\n"
                            ]
                        ]
                    }
                }
            },
            "Type": "AWS::EC2::Instance"
        },
        "sgnode2": {
            "Properties": {
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/sda1",
                        "Ebs": {
                            "VolumeSize": 25
                        }
                    }
                ],
                "DisableApiTermination": "false",
                "EbsOptimized": "false",
                "IamInstanceProfile": {
                    "Ref": "sgprofilenode2"
                },
                "ImageId": {
                    "Fn::FindInMap": [
                        "RegionToAmi",
                        {
                            "Ref": "AWS::Region"
                        },
                        "stable"
                    ]
                },
                "InstanceInitiatedShutdownBehavior": "stop",
                "InstanceType": "m4.xlarge",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "Monitoring": "false",
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": "true",
                        "DeleteOnTermination": "true",
                        "Description": "Primary network interface",
                        "DeviceIndex": 0,
                        "GroupSet": [
                            {
                                "Ref": "sgdemosecuritygroup"
                            }
                        ],
                        "SubnetId": {
                            "Ref": "sgdemosubnet"
                        }
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Search Guard node2"
                    },
                    {
                        "Key": "sgnodetag",
                        "Value": "node2"
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash\n",
                                "set -x\n",
                                "export LANGUAGE=en_US.UTF-8\n",
                                "export LANG=en_US.UTF-8\n",
                                "export LC_ALL=en_US.UTF-8\n",
                                "locale-gen en_US.UTF-8 >/dev/null 2>&1\n",
                                "\n",
                                "#we install all in /\n",
                                "cd /\n",
                                "\n",
                                "apt-get -yqq update > /dev/null 2>&1\n",
                                "apt-get -yqq install git wget curl > /dev/null 2>&1\n",
                                "rm -rf /sg-aws-demo\n",
                                "git clone https://github.com/floragunncom/sg-aws-demo.git\n",
                                "chmod +x /sg-aws-demo/*.sh\n",
                                "\n",
                                "until /sg-aws-demo/scripts/install_sg.sh; do\n",
                                "  echo \"something goes wrong, retrying in 60 seconds...\"\n",
                                "  git pull\n",
                                "  sleep 60\n",
                                "done\n"
                            ]
                        ]
                    }
                }
            },
            "Type": "AWS::EC2::Instance"
        },
        "sgnode3": {
            "Properties": {
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/sda1",
                        "Ebs": {
                            "VolumeSize": 25
                        }
                    }
                ],
                "DisableApiTermination": "false",
                "EbsOptimized": "false",
                "IamInstanceProfile": {
                    "Ref": "sgprofilenode3"
                },
                "ImageId": {
                    "Fn::FindInMap": [
                        "RegionToAmi",
                        {
                            "Ref": "AWS::Region"
                        },
                        "stable"
                    ]
                },
                "InstanceInitiatedShutdownBehavior": "stop",
                "InstanceType": "m4.xlarge",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "Monitoring": "false",
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": "true",
                        "DeleteOnTermination": "true",
                        "Description": "Primary network interface",
                        "DeviceIndex": 0,
                        "GroupSet": [
                            {
                                "Ref": "sgdemosecuritygroup"
                            }
                        ],
                        "SubnetId": {
                            "Ref": "sgdemosubnet"
                        }
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Search Guard node3"
                    },
                    {
                        "Key": "sgnodetag",
                        "Value": "node3"
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash\n",
                                "set -x\n",
                                "export LANGUAGE=en_US.UTF-8\n",
                                "export LANG=en_US.UTF-8\n",
                                "export LC_ALL=en_US.UTF-8\n",
                                "locale-gen en_US.UTF-8 >/dev/null 2>&1\n",
                                "\n",
                                "#we install all in /\n",
                                "cd /\n",
                                "\n",
                                "apt-get -yqq update > /dev/null 2>&1\n",
                                "apt-get -yqq install git wget curl > /dev/null 2>&1\n",
                                "rm -rf /sg-aws-demo\n",
                                "git clone https://github.com/floragunncom/sg-aws-demo.git\n",
                                "chmod +x /sg-aws-demo/*.sh\n",
                                "\n",
                                "until /sg-aws-demo/scripts/install_sg.sh; do\n",
                                "  echo \"something goes wrong, retrying in 60 seconds...\"\n",
                                "  git pull\n",
                                "  sleep 60\n",
                                "done\n"
                            ]
                        ]
                    }
                }
            },
            "Type": "AWS::EC2::Instance"
        },
        "sgprofilenode1": {
            "Properties": {
                "Path": "/",
                "Roles": [
                    {
                        "Ref": "sgdemorole"
                    }
                ]
            },
            "Type": "AWS::IAM::InstanceProfile"
        },
        "sgprofilenode2": {
            "Properties": {
                "Path": "/",
                "Roles": [
                    {
                        "Ref": "sgdemorole"
                    }
                ]
            },
            "Type": "AWS::IAM::InstanceProfile"
        },
        "sgprofilenode3": {
            "Properties": {
                "Path": "/",
                "Roles": [
                    {
                        "Ref": "sgdemorole"
                    }
                ]
            },
            "Type": "AWS::IAM::InstanceProfile"
        }
    }
}
